# memtomem-stm

./: .cla-e2e-marker.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml  release.yml
docs/: bench_qa.md  caching.md  cli.md  compression.md  configuration.md  operations.md  pipeline.md  surfacing.md  testing.md
notebooks/: 00_cli_and_mcp_hybrid.ipynb  05_observability_and_langfuse.ipynb  README.md  _build_notebooks.py
signatures/v1/: cla.json
src/memtomem_stm/: __init__.py  config.py  server.py
tests/: _fake_memtomem_server.py  conftest.py  test_auto_compression.py  test_bench_pipeline.py  test_bench_report.py  test_circuit_breaker.py  test_cleaning.py  test_compression.py  test_compression_feedback.py  test_compression_ratio_guard.py  test_config_constraints.py  test_config_persistence.py  test_context_extractor.py  test_context_window.py  test_core_format_contract.py  test_cross_session_dedup.py  test_effectiveness.py  test_error_metrics.py  test_extraction.py  test_feedback.py  test_formatter.py  test_information_loss.py  test_latency_percentiles.py  test_mcp_client_reconnect.py  test_memory_ops.py  test_metrics_bounds.py  test_metrics_store.py  test_observability.py  test_pending_store.py  test_privacy.py  test_progressive.py  test_proxy_cache.py  test_proxy_error_paths.py  test_proxy_manager.py  test_proxy_manager_lifecycle.py  test_proxy_manager_pipeline.py  test_qa_round3.py  test_query_aware.py  test_query_aware_bench.py  test_relevance_gate.py  (+11 more)
tests/bench/: __init__.py  conftest.py  (+12 more)
(+53 files in other folders)
