[project]
name = "memtomem-stm"
version = "0.1.0"
description = "Short-term memory proxy gateway with proactive memory surfacing for AI agents"
authors = [{name = "memtomem contributors"}]
license = {text = "Apache-2.0"}
keywords = ["memory", "ai", "mcp", "proxy", "gateway", "agent", "caching", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "click>=8.1",
]

[project.optional-dependencies]
ltm = ["memtomem>=0.1.0"]
langfuse = ["langfuse>=4.0"]

[project.scripts]
memtomem-stm = "memtomem_stm.server:main"
memtomem-stm-proxy = "memtomem_stm.cli.proxy:cli"

[project.urls]
Homepage = "https://github.com/memtomem/memtomem"
Repository = "https://github.com/memtomem/memtomem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memtomem_stm"]
